# serenity

Base/res/apps/: Irc.af
Userland/Applications/: CMakeLists.txt
Userland/Applications/Irc/: CMakeLists.txt  IrcWidget.cpp  IrcWidget.h  IrcWindow.gml  main.cpp
